[package]
name = "solana-geyser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-sdk = "2.2.1"
tokio = {version = "1.44.1", features = ["full", "rt-multi-thread"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
solana-transaction-status = "2.2.1"
log = "0.4.26"
