[package]
name = "solana-geyser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-sdk = "2.2.2"
tokio = {version = "1.44.1", features = ["full", "rt-multi-thread"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
solana-transaction-status = "2.2.2"
log = "0.4.26"
libloading = "0.7.4"
# solana-client = "2.2.2"
once_cell = "1.21.1"
# solana-rpc = "2.2.2"



borsh = { version = "1.5.7", features = ["derive"] }
borsh-derive = "1.5.7"
base64 = "0.21.7"
bincode = "1.3.3"
